--- a/admin.html
+++ b/admin.html
@@ -268,26 +268,26 @@
 												class="user-content admin-bot-content w-full h-full hidden flex-col justify-between px-4 pb-4">
 												<h4 class="text-center font-semibold text-[48px] pb-8 leading-none">
 													User's Data</h4>
-												<div class="h-[calc(100%_-_50px)] overflow-x-hidden overflow-y-auto">
-													<div class="bot-admin-user-section w-full">
-														<div
-															class="w-full flex justify-between rounded-xl bg-white p-2 mb-4">
-															<div class='w-1/4'>
-																<p class='text-center font-medium text-[32px] '>Name
-																</p>
-															</div>
-															<div class='w-1/3'>
-																<p class='text-center font-medium text-[32px] '>
-																	Phone</p>
-															</div>
-															<div class='w-1/3'>
-																<p class='text-center font-medium text-[32px] '>
-																	Email</p>
-															</div>
-															<div class='w-[40px]'>
-																<p class='text-center font-medium text-[32px] '></p>
-															</div>
+												<div class="w-full h-full">
+													<div
+														class="w-full flex justify-between rounded-xl bg-white p-2 mb-4">
+														<div class='w-1/4'>
+															<p class='text-center font-medium text-[32px] '>Name
+															</p>
 														</div>
+														<div class='w-1/3'>
+															<p class='text-center font-medium text-[32px] '>
+																Phone</p>
+														</div>
+														<div class='w-1/3'>
+															<p class='text-center font-medium text-[32px] '>
+																Email</p>
+														</div>
+														<div class='w-[40px]'>
+															<p class='text-center font-medium text-[32px] '></p>
+														</div>
+													</div>
+													<div class="bot-admin-user-section w-full h-[calc(100%_-_120px)] overflow-x-hidden overflow-y-auto">
 													</div>
 												</div>
 											</div>
